# b-ro-buddy

./: .dockerignore  .gitignore  README.md  biome.json  docker-compose.yml  package.json  pnpm-lock.yaml
.cursor/rules/: implementation-standards.mdc
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  config.py  database.py  models.py  schemas.py
apps/api/app/routes/: documents.py
apps/api/app/services/: analyze.py  chat.py  extract.py
apps/web/: Dockerfile  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/documents/: DocumentsList.tsx  page.tsx
apps/web/src/app/documents/[id]/: DocumentView.tsx  page.tsx
apps/web/src/lib/: api.ts
docs/: privacy.md  roadmap.md  threat-model.md
